Alterei a cor do hover do botão.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --botao-azul: #0d64ce;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter',sans-serif;
-    --botao-hover: #4e98f2;
+    --botao-hover: #0e1d2f;
 }
 
 * {
