--- a/style.css
+++ b/style.css
@@ -165,3 +165,35 @@ body {
     color: var(--cinza-secundario);
     font-size: 14px;
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        display: block;
+        background-image: none;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__caixa {
+        margin: 2rem 2rem;
+    }
+
+    .secundario {
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+    .lista__section {
+        display: block;
+    }
+
+     .rodape__lista {
+        display: block;
+    }
+}    
